--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <body>
             <h1>Odin Recipies</h1>
+            <a href="recipes/chicken_alfredo.html">Recipe Title</Title></a>
         </body>
     </head>
 </html>
