--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -8,7 +8,21 @@
             <p>Chicken alfredo is a classic favorite—a creamy white sauce, 
                 long strands of pasta mixed with tender pieces of lean protein. 
                 For this recipe, I cut the meat for quicker cooking and use a 
-                generous amount of seasonings for maximum flavor.</p>
+                generous amount of seasonings for maximum flavor.
+            </p>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>cooking spray</li>
+                <li>4 (4 ounce) skinless, boneless chicken breast halves</li>
+                <li>¼ cup water</li>
+                <li>1 (.7 ounce) package dry Italian-style salad dressing mix</li>
+                <li>1 clove garlic, pressed</li>
+                <li>1 (8 ounce) package cream cheese, softened</li>
+                <li>1 (10.5 ounce) can condensed cream of chicken soup</li>
+                <li>1 (4.5 ounce) can chopped canned mushrooms</li>
+                <li>1 (8 ounce) package spaghetti</li>
+                <li>1 tablespoon chopped fresh parsley</li>
+            </ul>
         </body>
     </head>
 </html>
