--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <head>
         <body>
             <h1>Odin Recipies</h1>
-            <a href="recipes/chicken_alfredo.html">Chicken Alfredo</Title></a>
+            <ul>
+                <li><a href="recipes/chicken_alfredo.html">Chicken Alfredo</Title></a></li>
+                <li><a href="recipes/chili.html">Chili</a></li>
+                <li><a href="recipes/iced_pumpkin_cookies.html">Iced Pumkin Cookies</a></li>
+            </ul>
         </body>
     </head>
 </html>
