corrected the links for the recipes pages

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <body>
             <h1>Odin Recipies</h1>
             <ul>
-                <li><a href="recipes/chicken_alfredo.html">Chicken Alfredo</Title></a></li>
-                <li><a href="recipes/chili.html">Chili</a></li>
-                <li><a href="recipes/iced_pumpkin_cookies.html">Iced Pumkin Cookies</a></li>
+                <li><a href="recipes/chicken_alfredo/chicken_alfredo.html">Chicken Alfredo</Title></a></li>
+                <li><a href="recipes/chili/chili.html">Chili</a></li>
+                <li><a href="recipes/cookies/iced_pumpkin_cookies.html">Iced Pumkin Cookies</a></li>
             </ul>
         </body>
     </head>
