--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="utf-8">
     <head>
-        <body>
-            <h1>Odin Recipies</h1>
-            <ul>
-                <li><a href="recipes/chicken_alfredo/chicken_alfredo.html">Chicken Alfredo</Title></a></li>
-                <li><a href="recipes/chili/chili.html">Chili</a></li>
-                <li><a href="recipes/cookies/iced_pumpkin_cookies.html">Iced Pumkin Cookies</a></li>
-            </ul>
-        </body>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <h1 class="Title">Odin Recipies</h1>
+        <ul>
+            <li><a href="recipes/chicken_alfredo/chicken_alfredo.html">Chicken Alfredo</Title></a></li>
+            <li><a href="recipes/chili/chili.html">Chili</a></li>
+            <li><a href="recipes/cookies/iced_pumpkin_cookies.html">Iced Pumkin Cookies</a></li>
+            </ul>
+    </body>
 </html>
