--- a/chicken_alfredo.html
+++ b/chicken_alfredo.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <body>
-            <h1>Chicken Alfredo</h1>
-            <img src="chicken-alfredo.jpg" alt="Dish">
-            <h2>Description</h2>
-            <p>Chicken alfredo is a classic favorite—a creamy white sauce, 
-                long strands of pasta mixed with tender pieces of lean protein. 
-                For this recipe, I cut the meat for quicker cooking and use a 
-                generous amount of seasonings for maximum flavor.
-            </p>
-            <h3>Ingredients</h3>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="/style.css">
+    </head>
+    <body>
+        <h1 class="Title">Chicken Alfredo</h1>
+        <img src="chicken-alfredo.jpg" alt="Dish">
+        <h2 class="Description">Description</h2>
+        <p class="Description">Chicken alfredo is a classic favorite—a creamy white sauce, 
+            long strands of pasta mixed with tender pieces of lean protein. 
+            For this recipe, I cut the meat for quicker cooking and use a 
+            generous amount of seasonings for maximum flavor.
+        </p>
+        <h3>Ingredients</h3>
             <ul>
                 <li>cooking spray</li>
                 <li>4 (4 ounce) skinless, boneless chicken breast halves</li>
@@ -23,7 +26,7 @@
                 <li>1 (8 ounce) package spaghetti</li>
                 <li>1 tablespoon chopped fresh parsley</li>
             </ul>
-            <h4>Steps</h4>
+        <h4>Steps</h4>
             <ol>
                 <li>Spray the crock of a slow cooker with nonstick cooking spray. 
                     Place chicken breasts in the crock. Combine water and Italian dressing mix in a small bowl. 
@@ -36,5 +39,4 @@
                 <li>To serve, spoon chicken and sauce over hot cooked pasta and sprinkle with parsley.</li>
             </ol>
         </body>
-    </head>
 </html>
