--- a/chili.html
+++ b/chili.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/style.css">
         <body>
             <h1>Best Damn Chilli</h1>
             <img src="Chilli.jpg" alt="Chili">
