--- a/cookies.html
+++ b/cookies.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/style.css">
         <body>
             <h1>Iced Pumpkin Cookies</h1>
             <img src="cookies.jpg" alt="Iced Pumpkin Cookies">
