--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <body>
             <h1>Best Damn Chilli</h1>
-            <img src="Chilli.jpg" alt="Chili">
+            <img src="../images/Chilli.jpg" alt="Chili">
             <h2>Description</h2>
             <p>A spicy, highly seasoned food that may appear similar to a hearty soup at times. 
                 Chili is typically made with ground turkey, beef or pork, kidney beans, tomatoes, 
