--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1 class="Title">Chicken Alfredo</h1>
-        <img src="chicken-alfredo.jpg" alt="Dish">
+        <img src="../images/chicken-alfredo.jpg" alt="Dish">
         <h2 class="Description">Description</h2>
         <p class="Description">Chicken alfredo is a classic favorite—a creamy white sauce, 
             long strands of pasta mixed with tender pieces of lean protein. 
