--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <body>
             <h1>Iced Pumpkin Cookies</h1>
-            <img src="cookies.jpg" alt="Iced Pumpkin Cookies">
+            <img src="../images/cookies.jpg" alt="Iced Pumpkin Cookies">
             <h2>Description</h2>
             <p>Super soft and fluffy Iced Pumpkin Cookies, topped with a sweet vanilla cinnamon icing 
                 and are a must for the fall season. These unique pumpkin-flavored fall treats are very 
